# ffmpeg-tutorial

./: .gitignore  CMakeLists.txt  LICENSE  README.md  avio.cpp  main.cpp  play-audio.cpp  random-noise.cpp  save-frame-custom.cpp  save-frame.cpp  stable-version.cpp  sync-video-with-audio-custom.cpp  sync-video-with-audio.cpp  temp.cpp
libs/ffmpeg/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
tutorial-01/: CMakeLists.txt  error-code.h  main.cpp
tutorial-02/: CMakeLists.txt  error-code.h  main.cpp
tutorial-03/: CMakeLists.txt  error-code.h  main.cpp  test-audio-callback.cpp
